--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
+PORT=5000
 CONNECTION_URI=mongodb+srv://bharatbisht825:GTd9TkrOmfuITHf4@cluster0.jeiicss.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
